# mcp-server-whatsapp

./: Cargo.toml  README.md
src/: api.rs  config.rs  lib.rs  main.rs  params.rs  server.rs
tests/: api_integration.rs
